2004-05-11  Dan Winship  <danw@ximian.com>

	* Ximian Connector 1.4.7, first GPL release.
