@@ -1,4 +1,11 @@
 2004-05-11  Dan Winship  <danw@ximian.com>
 
+	* configure.in: Bump version to 1.4.7.1
+
+	* acinclude.m4 (EVO_LDAP_CHECK): Fix this so it works with
+	non-Ximian OpenLDAP packages. (Problem noted by Frederic Crozat)
+
+2004-05-11  Dan Winship  <danw@ximian.com>
+
 	* Ximian Connector 1.4.7, first GPL release.
 
